Fix carousel spacing

--- a/css/style.css
+++ b/css/style.css
@@ -542,9 +542,14 @@ main {
 	}
 
 	.carousel-container {
-		flex-wrap: wrap;
-    	justify-content: center; 
-    	gap: 0.5rem;
+		display: flex;
+  		flex-wrap: wrap;
+  		justify-content: center;
+  		gap: 0.5rem;
+  		margin-left: auto;
+  		margin-right: auto;
+  		max-width: 100%;
+  		padding: 0;
 	}
 
 	/* Projects section */
